# vio_ws

./: README.md  test_ws.code-workspace
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/camera1394stereo/: Camera1394StereoConfig.h
devel/include/devices/: GpsMsg.h  GpsStatus.h  RtkMsg.h  SliderMsg.h  SliderSetting.h  SpanHeader.h  SpanNav.h  WheelMsg.h
devel/include/okvis_ros/: CameraConfig.h
devel/lib/camera1394stereo/: camera1394stereo_node
devel/lib/devices/: gps_node  imu_node  span_node  trigger_node  wheel_node
devel/lib/okvis_ros/: dataset_convertor
devel/lib/pkgconfig/: camera1394stereo.pc  devices.pc  okvis_ros.pc  test.pc
devel/lib/python2.7/dist-packages/camera1394stereo/cfg/: Camera1394StereoConfig.py
devel/lib/python2.7/dist-packages/devices/msg/: _GpsMsg.py  _GpsStatus.py  _RtkMsg.py  _SliderMsg.py  _SliderSetting.py  _SpanHeader.py  _SpanNav.py  _WheelMsg.py
devel/lib/python2.7/dist-packages/okvis_ros/cfg/: CameraConfig.py
devel/lib/python3/dist-packages/camera1394stereo/cfg/: Camera1394StereoConfig.py
devel/lib/python3/dist-packages/devices/msg/: _GpsMsg.py  _GpsStatus.py  _RtkMsg.py  _SliderMsg.py  _SliderSetting.py  _SpanHeader.py  _SpanNav.py  _WheelMsg.py  __init__.py
devel/lib/python3/dist-packages/okvis_ros/cfg/: CameraConfig.py
devel/lib/test/: convert_bag_to_csv  convert_bag_to_log  correct_camera_stamp  downsample_dataset
devel/share/camera1394stereo/cmake/: camera1394stereoConfig.cmake
devel/share/camera1394stereo/docs/: Camera1394StereoConfig-usage.dox  Camera1394StereoConfig.dox  Camera1394StereoConfig.wikidoc
devel/share/common-lisp/ros/devices/msg/: GpsMsg.lisp  GpsStatus.lisp  RtkMsg.lisp  SliderMsg.lisp  SliderSetting.lisp  SpanHeader.lisp  SpanNav.lisp  WheelMsg.lisp  _package.lisp  _package_GpsMsg.lisp  _package_GpsStatus.lisp  _package_RtkMsg.lisp  _package_SliderMsg.lisp  _package_SliderSetting.lisp  _package_SpanHeader.lisp  _package_WheelMsg.lisp  devices-msg.asd
devel/share/devices/cmake/: devices-msg-paths.cmake  devicesConfig.cmake
devel/share/gennodejs/ros/devices/msg/: GpsMsg.js  GpsStatus.js  RtkMsg.js  SliderMsg.js  SliderSetting.js  SpanHeader.js  SpanNav.js  WheelMsg.js  _index.js
devel/share/okvis_ros/cmake/: okvis_rosConfig.cmake
devel/share/okvis_ros/docs/: CameraConfig.wikidoc
devel/share/roseus/ros/devices/: manifest.l
devel/share/roseus/ros/devices/msg/: GpsMsg.l  GpsStatus.l  RtkMsg.l  SliderMsg.l  SliderSetting.l  SpanHeader.l  SpanNav.l  WheelMsg.l
devel/share/test/cmake/: testConfig.cmake
src/driver/devices/: CMakeLists.txt  package.xml
src/driver/devices/gps/include/: GpsDriver.hpp
src/driver/devices/gps/msg/: GpsMsg.msg  GpsStatus.msg
src/driver/devices/gps/src/: GpsDriver.cpp  gps_node.cpp
src/driver/devices/imu/include/imu/: ImuDriver.hpp
src/driver/devices/imu/src/: ImuDriver.cpp  imu_node.cpp
src/driver/devices/slider/include/slider/: SliderDriver.hpp
src/driver/devices/slider/msg/: SliderMsg.msg  SliderSetting.msg
src/driver/devices/slider/src/: SliderDriver.cpp  slider_node.cpp
src/driver/devices/span/include/: SpanDriver.hpp
src/driver/devices/span/msg/: RtkMsg.msg  SpanHeader.msg  SpanNav.msg
src/driver/devices/span/src/: SpanDriver.cpp  span_node.cpp
src/driver/devices/trigger/include/: TriggerDriver.hpp
src/driver/devices/trigger/src/: TriggerDriver.cpp  trigger_node.cpp
src/driver/devices/wheel/include/: WheelDriver.hpp
src/driver/devices/wheel/msg/: WheelMsg.msg
src/driver/devices/wheel/src/: WheelDriver.cpp  wheel_node.cpp
src/driver/test/: CMakeLists.txt  package.xml
src/driver/test/launch/: play_dataset.launch  run_gps.launch  run_imu_cam.launch  run_old_system.launch  run_system.launch  run_system_cam_imu.launch  run_wheel.launch
src/driver/test/src/: ConvertBagToCsv.cpp  ConvertBagToLog.cpp  CorrectCameraStamp.cpp  DownSampleDataset.cpp
src/okvis_ros/: CMakeLists.txt
src/okvis_ros/config/: rviz.rviz  rviz_mesh.rviz
src/okvis_ros/include/okvis/: Publisher.hpp  Subscriber.hpp
src/okvis_ros/launch/: okvis_node.launch  okvis_node_synchronous.launch
src/okvis_ros/okvis/: CMakeLists.txt
src/okvis_ros/okvis/config/: config_myVIO.yaml  config_myVIO_imu_100Hz.yaml  config_myVIO_imu_500Hz.yaml  sigma_sets.yaml
src/okvis_ros/okvis/okvis_ceres/src/: ImuError.cpp
src/okvis_ros/okvis/okvis_common/include/okvis/: FrameTypedefs.hpp  Measurements.hpp  VioInterface.hpp
src/okvis_ros/okvis/okvis_common/src/: VioInterface.cpp  VioParametersReader.cpp
src/okvis_ros/okvis/okvis_frontend/include/okvis/: Frontend.hpp
src/okvis_ros/okvis/okvis_multisensor_processing/include/okvis/: ThreadedKFVio.hpp
src/okvis_ros/okvis/okvis_multisensor_processing/src/: FrameSynchronizer.cpp  ThreadedKFVio.cpp
src/okvis_ros/okvis/okvis_timing/include/okvis/timing/: Timer.hpp
src/okvis_ros/okvis/okvis_timing/src/: Timer.cpp
src/okvis_ros/src/: Publisher.cpp  Subscriber.cpp  dataset_convertor.cpp  okvis_node.cpp  okvis_node_synchronous.cpp
