<?xml version="1.0"?>
<package format="2">
  <name>devices</name>
  <version>1.2.1</version>
  <description>
    The driver to communication with external devices,
    such as IMU, Slider and Trigger through serial port.
  </description>

  <maintainer email="thknguyen@hcmut.edu.vn">Nguyen Tran</maintainer>
  <license>MIT</license>
  <author email="thknguyen@hcmut.edu.vn">Nguyen Tran</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rosbag</depend>
  
  <test_depend>boost</test_depend>
</package>
