<?xml version="1.0"?>
<package format="2">
  <name>test</name>
  <version>0.1.0</version>
  <description>The test package</description>

  <maintainer email="nguyen@todo.todo">nguyen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>devices</depend>

</package>
